CORE_6412: Fixing alignment issue of size link and increasing the z-index for sizeguide dialog box.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-layout/component/_mobile-size-modal.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-layout/component/_mobile-size-modal.scss
@@ -72,4 +72,12 @@
       display: none;
     }
   }
+
+  .magazine-layout {
+    &.sizeguide-modal-overlay {
+      .ui-dialog {
+        z-index: 10000;
+      }
+    }
+  }
 }
